@@ -34,7 +34,7 @@ class TestGemExtExtConfBuilder < RubyGemTestCase
       "make: Nothing to be done for `install'.\n"
     ]
 
-    assert_match /^ruby extconf.rb/, output[0]
+    assert_match(/^ruby extconf.rb/, output[0])
     assert_equal "creating Makefile\n", output[1]
     case RUBY_PLATFORM
     when /mswin/ then
@@ -66,7 +66,7 @@ class TestGemExtExtConfBuilder < RubyGemTestCase
 ruby extconf.rb.*
 checking for main\(\) in .*?nonexistent/m, error.message)
 
-    assert_match /^ruby extconf.rb/, output[0]
+    assert_match(/^ruby extconf.rb/, output[0])
   end
 
   def test_class_make
